Add real projects, change logo to Home, improve spacing/centering

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a class="logo" href="index.html">Lily Zheng</a>
+      <a class="logo" href="index.html">Home</a>
       <ul class="nav-links">
         <li><a href="projects.html">Projects</a></li>
         <li><a href="experience.html">Experience</a></li>
@@ -21,21 +21,27 @@
     <h1>Projects</h1>
     <section class="projects-grid">
       <article class="project card">
-        <h3>Project One</h3>
-        <p>Short description of a project, tech used, and outcome.</p>
-        <p><a href="#">Live</a> • <a href="#">Code</a></p>
+        <h3>Equal Pay Website</h3>
+        <p>Built during Hackathon 2023. Addresses pay equity issues with data visualization and resources.</p>
+        <p><a href="https://github.com/Lilllyay/Equal-Pay-Website---Hackathon-2023.git">Code</a></p>
       </article>
 
       <article class="project card">
-        <h3>Project Two</h3>
-        <p>Short description of a project, tech used, and outcome.</p>
-        <p><a href="#">Live</a> • <a href="#">Code</a></p>
+        <h3>UTS Blue Hacks</h3>
+        <p>Hackathon project with innovative features and implementations.</p>
+        <p><a href="https://github.com/Lilllyay/UTS-Blue-Hacks.git">Code</a></p>
       </article>
 
       <article class="project card">
-        <h3>Project Three</h3>
-        <p>Short description of a project, tech used, and outcome.</p>
-        <p><a href="#">Live</a> • <a href="#">Code</a></p>
+        <h3>CNN Research — Skin Cancer</h3>
+        <p>Deep learning research using CNNs for skin cancer classification and detection.</p>
+        <p><a href="https://github.com/Lilllyay/CNN-Research---Skin-Cancer.git">Code</a></p>
+      </article>
+
+      <article class="project card">
+        <h3>ANN Research — Breast Cancer</h3>
+        <p>Artificial neural network research for breast cancer prediction and analysis.</p>
+        <p><a href="https://github.com/Lilllyay/ANN-Research---Breast-Cancer.git">Code</a></p>
       </article>
     </section>
   </main>
