--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a class="logo" href="index.html">Lily Zheng</a>
+      <a class="logo" href="index.html">Home</a>
       <ul class="nav-links">
         <li><a href="projects.html">Projects</a></li>
         <li><a href="experience.html">Experience</a></li>
