--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a class="logo" href="index.html">Lily Zheng</a>
+      <a class="logo" href="index.html">Home</a>
       <ul class="nav-links">
         <li><a href="projects.html">Projects</a></li>
         <li><a href="experience.html">Experience</a></li>
@@ -20,12 +20,12 @@
   <main class="container">
     <section class="hero">
       <h1>Hi — I'm Lily Zheng</h1>
-      <p>I'm a computer science student at the University of Illinois Urbana-Champaign and an AI enthusiast. I love exploring how AI and ML can automate </p>
+      <p>I'm a computer science student at the University of Illinois Urbana-Champaign and an AI enthusiast.</p>
     </section>
 
     <section class="about card">
       <h2>About Me</h2>
-      <p>I build web apps and static sites with a focus on clean UX and maintainable code. I care about performance, accessibility, and clear communication.</p>
+      <p>I have been exploring the application of AI and ML in different industires: healthcare, social justice, argriculture, finance, and media. I have also worked extensively on back-end development as a software engineer. Check out my projects and experiences.</p>
       <p>Skills: HTML, CSS, JavaScript, React, Node.js, Python</p>
       <p>Contact: <a href="mailto:you@example.com">you@example.com</a></p>
     </section>
