Add typewriter animation to h1 and center hero text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main class="container">
     <section class="hero">
-      <h1>Hi — I'm Lily Zheng</h1>
+      <h1 id="typewriter">Hi — I'm Lily Zheng</h1>
       <p>I'm a computer science student at the University of Illinois Urbana-Champaign and an AI enthusiast.</p>
     </section>
 
