--- a/experience.html
+++ b/experience.html
@@ -21,18 +21,27 @@
     <h1>Experience</h1>
     <section class="experience-list card">
       <div class="job">
-        <h3>Frontend Developer — Company A</h3>
-        <p>2023–Present — Worked on UI components, performance, and accessibility improvements.</p>
+        <h3>Technical Consultant</h3>
+        <p><strong>OTCR Consulting</strong> • October 2025 – Present</p>
+        <p>Work with an AI startup on optimizing computer vision models for logo detections on video clips of sports events. Expanded YOLO and Google Cloud Vision API pipeline, improving occlusion detection and location tagging accuracy by 60%.</p>
       </div>
 
       <div class="job">
-        <h3>Web Developer — Company B</h3>
-        <p>2021–2023 — Built marketing microsites and internal tools.</p>
+        <h3>Undergraduate Researcher</h3>
+        <p><strong>National Center for Supercomputing Applications (NCSA)</strong> • September 2025 – Present</p>
+        <p>Support and contribute to Dr. Adve's research on building agricultural foundation models using reinforcement learning and simulations. Implement RL training pipeline, annotate datasets, set up and fine-tune RL agents in gym-DSSAT environment, and generate supervised fine-tuning datasets for LLMs.</p>
       </div>
 
       <div class="job">
-        <h3>Intern — Company C</h3>
-        <p>2020 — Assisted with frontend tasks and testing.</p>
+        <h3>Research Intern</h3>
+        <p><strong>CodeGram</strong> • June 2024 – July 2024</p>
+        <p>Boosted work efficiency and client satisfaction by 40% through researching cyber-bribery involving digital assets. Raised deepfake awareness through social media graphics, translating technical concepts into clear, relatable language.</p>
+      </div>
+
+      <div class="job">
+        <h3>AI Developer Intern</h3>
+        <p><strong>Frend.ai</strong> • October 2023 – January 2024</p>
+        <p>Integrated and optimized third-party APIs to extract, process, and store user data, improving system efficiency by 35%. Built ML algorithm to filter chatbot responses for triggering/harmful contents, improving user experience by 70%.</p>
       </div>
     </section>
   </main>
